<resources>
    <string name="app_name">MTMS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tv_login_user_email">Email</string>
    <string name="tv_user_psw">Password</string>
    <string name="btn_user_login_text">Login</string>
    <string name="tv_register_text">Register user.</string>
    <string name="tv_forgot_text">Forgot Password? | </string>
    <string name="msg_txt_cent_cnt">You have 0 Centres in the Database</string>
    <string name="btn_dwnld_cent_txt">Download Centres</string>
    <string name="btn_upload_data_label">Upload Visit Data</string>
    <string name="btn_prepare_data">Prepare Data</string>
    <string name="sub_title">for ICDS, Jalpaiguri</string>
    <string name="centre_s_found_open">Centre(s) found open</string>
    <string name="and">And</string>
    <string name="monitoring_system">Monitoring System</string>
    <string name="mobile_based_tracking">Mobile based Tracking</string>
    <string name="totcentres">9999</string>
    <string name="opencentres">9999</string>
    <string name="centre_s_visited">Centre(s) Visited</string>
    <string name="during_last_30_days">During last 30 days</string>
    <string name="entre_visit_s">Entre Visit(s)</string>
    <string name="upload_visit_s">Upload Visit(s)</string>
    <string name="logout">Logout</string>
    <string name="download">Download</string>
    <string name="todo">TODO</string>
    <string name="you_r_already_logged_in">You\'r already logged in!</string>
    <string name="logout1">Logout</string>
    <string name="back_to_dashboard">Back to Dashboard</string>

</resources>
